# AISquare-Studio-QA

./: .flake8  .gitignore  ACTIVE_EXECUTION_SUMMARY.md  CHANGELOG.md  CHANGELOG_SCREENSHOT_FIX.md  CODE_OF_CONDUCT.md  COMMENT_FLOW_DIAGRAM.md  CONTRIBUTING.md  LICENSE  README.md  README_NEW.md  SCREENSHOT_QUICK_REFERENCE.md  SECURITY.md  SINGLE_COMMENT_SUMMARY.md  SUMMARY_SCREENSHOT_FIX.md  SUPPORT.md  VALIDATION_CHECKLIST.md  VISUAL_GUIDE_SCREENSHOT_FIX.md  action.yml  env.template  env_template  pyproject.toml  pytest.ini  qa_runner.py  requirements.txt  run_login_tests.py  setup_environment.py  test_active_execution.py  test_complete_flow.py  test_framework.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
config/: autoqa_config.yaml  test_data.yaml  testid_registry.yaml
docs/: ACTION_USAGE.md  ACTIVE_EXECUTION.md  ARCHITECTURE.md  AUTOQA_ENHANCEMENT_ROADMAP.md  AUTOQA_QUICK_START.md  COMPLETE_AUTOMATION_QA_OVERVIEW.md  DASHBOARD_JSON_SCHEMA.md  FE_REACT_INTEGRATION.md  LINTING.md  OPEN_SOURCE_ROADMAP.md  PHASE1_IMPLEMENTATION_SUMMARY.md  REACT_INTEGRATION_GUIDE.md  RELEASE_PROCESS.md  SCREENSHOT_FIX.md  SINGLE_COMMENT_FIX.md  USAGE.md
examples/: EXAMPLE_PR_DESCRIPTION.md  PR_TEMPLATE_WITH_AUTOQA.md  auto-criteria-workflow.yml  fe-react-autoqa-workflow.yml  playwright.config.js  react-autoqa-workflow-sha.yml  react-autoqa-workflow.yml
reports/: test_results.json
src/: exceptions.py
tests/: conftest.py  test_create_studio.py  test_criteria_generator.py  test_dashboard_results.py  test_exceptions.py  (+13 more)
(+49 files in other folders)
